# bazel-fsharp-native

./: .gitignore  BUILD.bazel  Program.fs  README.md  WORKSPACE  math.c  paket.dependencies  sync-paket.sh
